--- a/Pages/styles/episode01.css
+++ b/Pages/styles/episode01.css
@@ -1,12 +1,15 @@
 :root {
     --fontColor--title--transparency: rgba(255, 255, 255, 0.8);
     --fontColor--title: #fff;
+    --fontColor--episodesTitle: #100938;
     --fontColor--button: #000;
 
     --borderRadius--button: 2rem 1rem;
     --innerShadow--button: inset 5px 7px 10px rgba(0, 0, 0, 0.6);
     --backgroundColor--button: #D9D9D9;
     --backgroundColor--buttonClicked: #fff;
+
+    --backgroundColor--gray: #D9D9D9;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@300;400;700&display=swap');
@@ -33,6 +36,7 @@
 }
 
 body {
+    background-color: var(--backgroundColor--gray);
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
 
@@ -60,4 +64,74 @@ h3 {
 
 .hidden {
     display: none;
+}
+
+.header_pageOne {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    background-image: url(../assets/episode01/image_background--episodeOne.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    color: var(--fontColor--episodesTitle);
+
+    padding: 5% 0;
+}
+
+.pageOne_content--icon {
+    clip-path: polygon(100% 50%, 0 0, 0 100%);
+    cursor: pointer;
+    font-size: 12rem;
+}
+
+.pageOne_content--icon:hover {
+    transform: scale(1.1);
+}
+
+.pageOne_content--title {
+    font-size: 5rem;
+    font-weight: bold;
+    line-height: 4.5rem;
+}
+
+.pageOne_content--subtitle {
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 300;   
+    
+    margin-bottom: 2%;
+}
+
+.main_pageOne {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.pageOne_container--introductionTexts {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 100%;
+}
+
+.content_introductionTexts--lowerTitle {
+    color: var(--fontColor--title);
+
+    font-weight: 300;
+    font-size: 2rem;
+
+    padding: 1% 0;
+}
+
+.content_introductionTexts--separationBar {
+    color: var(--fontColor--title);
+    width: 80%;
 }
