--- a/Pages/styles/episode02.css
+++ b/Pages/styles/episode02.css
@@ -158,12 +158,12 @@ h3 {
 .pageTwo_content--lowerTitle {
     color: var(--fontColor--white);
 
-    
+
     font-size: 2rem;
     font-weight: 100;
 
     margin: 2% auto;
-    
+
     text-align: center;
 
     width: 90%;
@@ -196,7 +196,7 @@ h3 {
     font-weight: 100;
 
     margin: 1% auto;
-    
+
     text-align: center;
 
     width: 90%;
@@ -211,7 +211,7 @@ h3 {
     align-items: center;
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(4,auto);
+    grid-template-columns: repeat(4, auto);
 
     margin: 2% auto;
 }
@@ -220,27 +220,25 @@ h3 {
     grid-column: span 1;
 
     background-color: var(--backgroundColor--button);
-    
+
     box-shadow: inset 5px 7px 10px rgba(0, 0, 0, 0.6);
     border-radius: 2rem 1rem;
     border: none;
 
     cursor: pointer;
 
-    height: 5rem;
-    width: 8rem;
+    height: 10rem;
+    width: 16rem;
 
     transform: skew(-20deg);
 }
 
-.content_interactionButtons--icon {
-    color: var(--fontColor--episodesTitle);
-    font-size: 1.6rem;
+.content_interactionButtons--iconImage {
     transform: skew(20deg);
 }
 
-.content_interactionButtons--iconImage {
-    transform: skew(20deg);
+.content_interactionButtons--buttons:hover {
+    background-color: var(--backgroundColor--buttonClicked);
 }
 
 .container_video--iframe {
@@ -254,17 +252,50 @@ h3 {
     border-radius: 1rem;
 }
 
-.pageTwo_container--takingNote {}
+.pageTwo_container--takingNote {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
-.content_takingNote--title {}
+.content_takingNote--lowerTitle {
+    color: var(--fontColor--white);
 
-.container_takingNote--imageAndText {}
+    font-size: 2rem;
+    font-weight: 100;
 
-.content_takingNote--image {}
+    margin: 2% auto;
 
-.container_takingNote--texts {}
+    text-align: center;
 
-.content_takingNote--paragraph {}
+    width: 90%;
+}
+
+.container_takingNote--imageAndText {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    margin: 2%;
+}
+
+.content_takingNote--image {
+    display: block;
+}
+
+.container_takingNote--texts {
+    margin-left: 2%;
+}
+
+.content_takingNote--paragraph {
+    color: var(--fontColor--white);
+
+    font-size: 2rem;
+    font-weight: 100;
+
+    margin: 2% auto;
+}
 
 .footer_pageTwo {
     background-color: #000;
@@ -276,4 +307,97 @@ h3 {
     font-size: 1.6rem;
     padding: 5%;
     text-align: center;
+}
+
+@media screen and (max-width:1024px) {
+    .content_interactionButtons--buttons {
+        height: 8rem;
+        width: 12rem;
+    }
+
+    .content_interactionButtons--iconImage {
+        width: 4rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .content_interactionButtons--buttons {
+        height: 5rem;
+        width: 8rem;
+    }
+
+    .content_interactionButtons--iconImage {
+        width: 2rem;
+    }
+}
+
+@media screen and (max-width:425px) {
+    .pageTwo_container--readingTip {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .container_readingTip--text {
+        align-items: center;
+        justify-content: center;
+        margin: 2% auto;
+
+        width: 90%;
+    }
+
+    .content_readingTip--title {
+        justify-content: center;
+    }
+
+    .content_readingTip--paragraph {
+        text-align: center;
+        width: 100%;
+    }
+
+    .content_interactionButtons--buttons {
+        height: 3rem;
+        width: 5rem;
+    }
+
+    .content_interactionButtons--iconImage {
+        width: 1rem;
+    }
+
+    .container_video--iframe {
+        height: 250px;
+        width: 350px;
+    }
+
+    .container_takingNote--imageAndText {
+        flex-direction: column;
+    }
+
+    .container_takingNote--texts {
+        margin-left: 0;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:375px) {
+    .container_interactionButtons--buttons {
+        gap: .5rem;
+    }
+
+    .content_interactionButtons--buttons {
+        height: 2.5rem;
+        width: 4rem;
+    }
+
+}
+
+@media screen and (max-width:375px) {
+
+    .content_takingNote--image {
+        width: 300px;
+    }
+
+    .container_video--iframe {
+        height: 150px;
+        width: 300px;
+    }
 }
