Structure Tips blocks

--- a/Pages/styles/episode02.css
+++ b/Pages/styles/episode02.css
@@ -11,6 +11,7 @@
     --backgroundColor--buttonClicked: #fff;
 
     --backgroundColor--gray: #D9D9D9;
+    --backgroundColor--blue: #100938;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@300;400;700&display=swap');
@@ -61,10 +62,6 @@ h2 {
 
 h3 {
     font-family: 'riffic_bold';
-}
-
-.hidden {
-    display: none;
 }
 
 .header_pageTwo {
@@ -241,6 +238,488 @@ h3 {
     background-color: var(--backgroundColor--buttonClicked);
 }
 
+.container_interactionButtons--tips {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container_tips--tipOne {
+    align-items: center;
+
+    background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+
+    display: grid;
+    grid-template-areas:
+        "titleTipOne titleTipOne"
+        "textTipOne buttonsTipOne"
+        "textClickOneTipOne textClickTwoTipOne"
+        "textClickTreeTipOne .";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+
+    width: 100%;
+}
+
+.content_tipOne--upperTitle {
+    color: var(--fontColor--title);
+
+    font-weight: 300;
+    font-size: 2rem;
+
+    grid-area: titleTipOne;
+
+    margin: 1% auto;
+
+    text-align: center;
+
+    width: 90%;
+}
+
+.content_tipOne--paragraph {
+    color: var(--fontColor--title);
+
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+
+    grid-area: textTipOne;
+
+    margin: auto;
+
+    width: 80%;
+}
+
+.container_tipOne--buttons {
+    background-image: url(../assets/episode02/map_imagemTipOne--episodeTwo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    display: grid;
+
+    grid-area: buttonsTipOne;
+
+    grid-template-areas:
+        "buttonOneTipOne . . ."
+        ". . . ."
+        ". . . buttonTwoTipOne"
+        ". buttonTreeTipOne . .";
+
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(4, auto);
+
+    margin: auto;
+}
+
+.content_tipOne--button {
+    cursor: pointer;
+
+    background-color: var(--backgroundColor--blue);
+    border-radius: 50%;
+    border: 1rem solid var(--backgroundColor--gray);
+
+    margin: 2rem;
+    padding: 1rem;
+}
+
+.content_tipOne--buttonOne {
+    grid-area: buttonOneTipOne;
+}
+
+.content_tipOne--buttonTwo {
+    grid-area: buttonTwoTipOne;
+}
+
+.content_tipOne--buttonTree {
+    grid-area: buttonTreeTipOne;
+}
+
+.container_tipOne--buttonOpen {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.content_tipOne--buttoOpen {
+    background-color: var(--backgroundColor--gray);
+    color: var(--fontColor--button);
+
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    border-radius: 2rem;
+    clip-path: polygon(0 5%, 100% 0%, 1000% 100%, 0 100%);
+
+
+    font-size: 1rem;
+    font-weight: 300;
+
+    margin: 1% auto;
+
+    text-align: center;
+
+    height: 14rem;
+    width: 24rem;
+}
+
+.textClickOneTipOne {
+    grid-area:textClickOneTipOne ;
+}
+
+.textClickTwoTipOne {
+    grid-area:textClickTwoTipOne ;
+}
+
+.textClickTreeTipOne {
+    grid-area:textClickTreeTipOne ;
+}
+
+.content_tipOne--buttoOpen p {
+    width: 80%;
+}
+
+.container_tips--tipTwo {
+    background-image: url(../assets/episode02/backgroundImage_tipTwo--episodeTwo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: grid;
+
+    grid-template-areas:
+        "titletipTwo titletipTwo"
+        "textOnetipTwo buttonstipTwo"
+        "textTwotipTwo buttonstipTwo"
+        "textTreetipTwo buttonstipTwo"
+        "textClickOnetipTwo textClickTwotipTwo"
+        "textClickTreetipTwo textClickFourtipTwo";
+    grid-template-columns: repeat(2, 1fr);
+
+    width: 100%;
+}
+
+.content_tipTwo--upperTitle {
+    color: var(--fontColor--title);
+
+    font-weight: 300;
+    font-size: 2rem;
+
+    grid-area: titletipTwo;
+
+    margin: 1% auto;
+
+    text-align: center;
+
+    width: 90%;
+}
+
+.content_tipTwo--paragraph {
+    color: var(--fontColor--title);
+
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+
+    margin: 2% auto;
+
+    width: 80%;
+}
+
+.textOneTipTwo {
+    grid-area: textOnetipTwo;
+}
+
+.textTwoTipTwo {
+    grid-area: textTwotipTwo;
+}
+
+.textTreeTipTwo {
+    grid-area: textTreetipTwo;
+}
+
+.container_tipTwo--buttons {
+
+    display: grid;
+
+    grid-area: buttonstipTwo;
+
+    grid-template-areas:
+        ". . . buttonOnetipTwo  . ."
+        "buttonTwotipTwo . . . . ."
+        ". . . . buttonTreetipTwo ."
+        ". . buttonFourtipTwo . . .";
+
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, auto);
+}
+
+.content_tipTwo--button {
+    cursor: pointer;
+
+    background-color: var(--backgroundColor--blue);
+    border-radius: 50%;
+    border: 1rem solid var(--backgroundColor--gray);
+
+    margin: 1rem;
+    padding:1.6rem .5rem;
+}
+
+.content_tipTwo--buttonOne {
+    grid-area: buttonOnetipTwo;
+}
+
+.content_tipTwo--buttonTwo {
+    grid-area: buttonTwotipTwo;
+}
+
+.content_tipTwo--buttonTree {
+    grid-area: buttonTreetipTwo;
+}
+
+.content_tipTwo--buttonFour {
+    grid-area: buttonFourtipTwo;
+}
+
+.container_tipTwo--buttonOpen {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.textClickOneTipTwo {
+    grid-area:textClickOnetipTwo ;
+}
+
+.textClickTwoTipTwo {
+    grid-area:textClickTwotipTwo ;
+}
+
+.textClickTreeTipTwo {
+    grid-area:textClickTreetipTwo ;
+}
+
+.textClickFourTipTwo {
+    grid-area:textClickFourtipTwo ;
+}
+
+.content_tipTwo--buttoOpen {
+    background-color: var(--backgroundColor--gray);
+    color: var(--fontColor--button);
+
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    border-radius: 2rem;
+    clip-path: polygon(0 5%, 100% 0%, 1000% 100%, 0 100%);
+
+
+    font-size: 1rem;
+    font-weight: 300;
+
+    margin: 1% auto;
+
+    text-align: center;
+
+    height: 14rem;
+    width: 24rem;
+}
+
+.content_tipTwo--buttoOpen p {
+    width: 80%;
+}
+
+.container_tips--tipTree {
+    background-image: url(../assets/episode02/backgroundImage_tipTree--episodeTwo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: grid;
+    grid-template-areas:
+        "titleTipTree titleTipTree"
+        "textTipTree textTipTree"
+        "listItemOneTipTree interactionBlockTipTree"
+        "listItemTwoTipTree interactionBlockTipTree";
+    grid-template-columns: repeat(2, 1fr);
+
+    padding: 5% 0;
+
+    width: 100%;
+}
+
+.content_tipTree--upperTitle {
+    color: var(--fontColor--title);
+
+    font-weight: 300;
+    font-size: 2rem;
+
+    grid-area: titleTipTree;
+
+    margin: 1% auto;
+
+    text-align: center;
+
+    width: 90%;
+}
+
+.content_tipTree--paragraph {
+    color: var(--fontColor--title);
+
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+
+    grid-area: textTipTree;
+
+    margin:0 auto 2% auto;
+
+    text-align: center;
+
+    width: 80%;
+}
+
+.container_tipTree--list {
+    margin: 2% auto;
+    width: 80%;
+}
+
+.content_tipTree--item {
+    color: var(--fontColor--title);
+
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+
+    margin:1% auto;
+}
+
+.listItemOneTipTree {
+    grid-area: listItemOneTipTree;
+}
+
+.listItemTwoTipTree {
+    grid-area: listItemTwoTipTree;
+}
+
+.container_tipTree--interactionBlock {
+    margin: 2% auto;
+    width: 80%;
+}
+
+.container_tipTree--textBlock {
+    background-color: var(--backgroundColor--blue);
+    color: var(--fontColor--white);
+
+    border-radius:  2rem 2rem 0 0;
+
+    padding: 5%;
+
+    text-align: center;
+}
+
+.content_tipTree--text {
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+.container_tipTree--buttons {
+    align-items: center;
+    display: grid;
+
+    grid-template-areas:
+    "buttonOneTipTree buttonTwoTipTree buttonTreeTipTree buttonFourTipTree buttonFiveTipTree buttonSixTipTree";
+    grid-template-columns: repeat(6,1fr);
+
+    justify-content: space-around;
+
+    background-color: var(--backgroundColor--buttonClicked);
+    color: var(--backgroundColor--blue);
+
+    font-family: 'riffic_bold';
+}
+
+.content_tipTree--button {
+    cursor: pointer;
+    
+    font-size: 1.2rem;
+    
+    margin: auto;
+    padding: 2%;
+}
+
+.content_tipTree--buttonOne {
+    grid-area: buttonOneTipTree;
+}
+
+.content_tipTree--buttonTwo {
+    grid-area: buttonTwoTipTree;
+}
+
+.content_tipTree--buttonTree {
+    grid-area: buttonTreeTipTree;
+}
+
+.content_tipTree--buttonFour {
+    grid-area: buttonFourTipTree;
+}
+
+.content_tipTree--buttonFive {
+    grid-area: buttonFiveTipTree;
+}
+
+.content_tipTree--buttonSix {
+    grid-area: buttonSixTipTree;
+}
+
+.borderClickedTipTree {
+    border: .2rem solid var(--backgroundColor--blue);
+
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    width: 100%;
+}
+
+.container_tipTree--interactionTexts {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.content_tipTree--interactionText {
+    background-color: var(--backgroundColor--gray);
+    color: var(--fontColor--button);
+
+    border-radius: 0 0 2rem 2rem;
+
+    font-family: 'caviar_dreams', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+
+    padding: 5%;
+
+    text-align: center;
+}
+
+.textOne--tipTree {}
+
+.textTwo--tipTree {}
+
+.textTree--tipTree {}
+
+.textFour--tipTree {}
+
+.textFive--tipTree {}
+
+.textSix--tipTree {}
+
 .container_video--iframe {
     margin: 2% auto;
 
@@ -400,4 +879,16 @@ h3 {
         height: 150px;
         width: 300px;
     }
+}
+
+.buttonWidth {
+    width: 0rem;
+}
+
+.buttonHeigth {
+    height: 0rem;
+}
+
+.hidden {
+    display: none;
 }
