--- a/Pages/styles/episode01.css
+++ b/Pages/styles/episode01.css
@@ -52,18 +52,17 @@ main {
 
 h1 {
     font-family: 'riffic_bold';
+    text-align: center;
 }
 
 h2 {
     font-family: 'riffic_bold';
+    text-align: center;
 }
 
 h3 {
     font-family: 'riffic_bold';
-}
-
-.hidden {
-    display: none;
+    text-align: center;
 }
 
 .header_pageOne {
@@ -71,7 +70,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
     background-image: url(../assets/episode01/image_background--episodeOne.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -79,6 +78,10 @@ h3 {
 
     color: var(--fontColor--episodesTitle);
 
+    padding: 0;
+}
+
+.padding_header {
     padding: 5% 0;
 }
 
@@ -101,9 +104,17 @@ h3 {
 .pageOne_content--subtitle {
     font-family: 'caviar_dreams', sans-serif;
     font-size: 2.5rem;
-    font-weight: 300;   
-    
+    font-weight: 300;
+
     margin-bottom: 2%;
+}
+
+.pageOne_background--iframe {
+    
+    height: 60vh;
+    width: 100vw;
+
+    opacity: 0;
 }
 
 .main_pageOne {
@@ -171,7 +182,7 @@ h3 {
     align-items: center;
     display: flex;
     justify-content: center;
-    
+
     background-image: url(../assets/episode01/image_card--episodeOne.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -185,7 +196,7 @@ h3 {
     align-items: center;
     display: flex;
     justify-content: center;
-    
+
     background-image: url(../assets/episode01/image_cardTwo--episodeOne.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -204,7 +215,7 @@ h3 {
     opacity: 0;
     text-align: center;
 
-    width: 50%;
+    width: 40%;
 }
 
 .content_hoverCards--background:hover .content_hoverCards--text {
@@ -236,4 +247,50 @@ h3 {
     font-size: 1.6rem;
     padding: 5%;
     text-align: center;
+}
+
+@media screen and (max-width:768px) {
+    .content_hoverCards--lowerTitle {
+        text-align: center;
+        width: 90%;
+    }
+
+    .container_hoverCards {
+        flex-direction: column;
+    }
+
+    .content_hoverCards--text {
+        opacity: 1;
+        width: 30%;
+    }
+}
+
+@media screen and (max-width:425px) {
+    .pageOne_content--title {
+        font-size: 3rem;
+    }
+
+    .content_introductionTexts--lowerTitle {
+        text-align: center;
+    }
+
+    .pageOne_content--subtitle {
+        font-size: 2rem;
+    }
+
+    .container_video--iframe {
+        height: 200px;
+        width: 320px;
+    }
+
+    .content_hoverCards--text {
+        width: 60%;
+    }
+}
+.hidden {
+    display: none;
+}
+
+.setOpacity {
+    opacity: 1;
 }
