--- a/Pages/styles/episode03.css
+++ b/Pages/styles/episode03.css
@@ -53,14 +53,17 @@ main {
 
 h1 {
     font-family: 'riffic_bold';
+    text-align: center;
 }
 
 h2 {
     font-family: 'riffic_bold';
+    text-align: center;
 }
 
 h3 {
     font-family: 'riffic_bold';
+    text-align: center;
 }
 
 .hidden {
@@ -80,6 +83,8 @@ h3 {
 
     color: var(--fontColor--episodesTitle);
 
+}
+.padding_header {
     padding: 5% 0;
 }
 
@@ -105,6 +110,14 @@ h3 {
     font-weight: 300;
 
     margin: 2%;
+}
+
+.pageTree_background--iframe {
+    
+    height: 60vh;
+    width: 100vw;
+
+    opacity: 0;
 }
 
 .main_pageTree {
@@ -263,4 +276,12 @@ h3 {
     .container_informationBlock--texts {
         width: 70%;
     }
+}
+
+.hidden {
+    display: none;
+}
+
+.setOpacity {
+    opacity: 1;
 }
